--- a/madlib.html
+++ b/madlib.html
@@ -37,7 +37,7 @@
 
       <div id="story">
         <h1>My day from HELL</h1>
-        <p>My name is <span class="person1"></span> and let me tell you about my horrible day at <span class="place"></span>. I got <span class="verb"></span> by a <span class="adjective"></span>! And it was a MONDAY!"</p>
+        <p>My name is <span class="person1"></span> and let me tell you about my horrible day at <span class="place"></span>. I got <span class="verb"></span> by a <span class="adjective"></span> ferret! And it was a MONDAY!</p>
       </div>
     </div>
   </body>
